media_core_ffi/lib/src/media_core_bindings.dart

// AUTO GENERATED FILE, DO NOT EDIT.
//
// Generated by `package:ffigen`.
// ignore_for_file: type=lint
import 'dart:ffi' as ffi;

/// Auto-generated FFI bindings for media_core.h
class MediaCoreBindings {
  /// Holds the symbol lookup function.
  final ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
      _lookup;

  /// The symbols are looked up in [dynamicLibrary].
  MediaCoreBindings(ffi.DynamicLibrary dynamicLibrary)
      : _lookup = dynamicLibrary.lookup;

  /// The symbols are looked up with [lookup].
  MediaCoreBindings.fromLookup(
      ffi.Pointer<T> Function<T extends ffi.NativeType>(String symbolName)
          lookup)
      : _lookup = lookup;

  /// extract_audio_pcm
  /// -----------------
  /// Demux, decode, and resample the audio track of any supported video/audio
  /// container file into a normalised 16 kHz mono S16LE PCM stream, then apply
  /// a simple energy-based Voice Activity Detector (VAD) to suppress silence.
  ///
  /// Supported input containers : MP4, MOV, MKV, AVI, MP3, WAV, AAC, FLAC
  /// Supported audio codecs     : AAC, MP3, FLAC, PCM S16, Opus, Vorbis
  /// Output format              : 16000 Hz · Mono · int16_t (S16LE)
  ///
  /// Parameters
  /// ----------
  /// video_path   : Null-terminated UTF-8 path to the media file.
  ///
  /// Returns
  /// -------
  /// AudioBufferResult with:
  /// data != NULL, sample_count > 0   → success; caller must free data
  /// data == NULL, sample_count == 0  → failure (file not found, no audio track,
  /// codec error, or zero speech detected)
  ///
  /// Thread safety
  /// -------------
  /// Re-entrant: multiple calls with different paths may run concurrently.
  /// Each call allocates its own independent output buffer.
  AudioBufferResult extract_audio_pcm(
    ffi.Pointer<ffi.Char> video_path,
  ) {
    return _extract_audio_pcm(
      video_path,
    );
  }

  late final _extract_audio_pcmPtr = _lookup<
          ffi
          .NativeFunction<AudioBufferResult Function(ffi.Pointer<ffi.Char>)>>(
      'extract_audio_pcm');
  late final _extract_audio_pcm = _extract_audio_pcmPtr
      .asFunction<AudioBufferResult Function(ffi.Pointer<ffi.Char>)>();

  /// free_audio_buffer
  /// -----------------
  /// Release the native heap memory returned by extract_audio_pcm().
  ///
  /// MUST be called exactly once per successful extract_audio_pcm() call.
  /// Passing NULL is safe (no-op).
  ///
  /// Parameters
  /// ----------
  /// buffer : The data pointer from AudioBufferResult.data.
  void free_audio_buffer(
    ffi.Pointer<ffi.Int16> buffer,
  ) {
    return _free_audio_buffer(
      buffer,
    );
  }

  late final _free_audio_bufferPtr =
      _lookup<ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Int16>)>>(
          'free_audio_buffer');
  late final _free_audio_buffer =
      _free_audio_bufferPtr.asFunction<void Function(ffi.Pointer<ffi.Int16>)>();

  /// vad_rms
  /// -------
  /// Compute the Root Mean Square energy of a PCM segment.
  ///
  /// Parameters
  /// ----------
  /// buf       : Pointer to int16_t PCM samples.
  /// n_samples : Number of samples to evaluate.
  ///
  /// Returns
  /// -------
  /// RMS value in the range [0, 32767].  Returns 0 when n_samples == 0.
  int vad_rms(
    ffi.Pointer<ffi.Int16> buf,
    int n_samples,
  ) {
    return _vad_rms(
      buf,
      n_samples,
    );
  }

  late final _vad_rmsPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(ffi.Pointer<ffi.Int16>, ffi.Int)>>('vad_rms');
  late final _vad_rms =
      _vad_rmsPtr.asFunction<int Function(ffi.Pointer<ffi.Int16>, int)>();

  /// vad_is_speech
  /// -------------
  /// Classify a PCM segment as speech (1) or silence (0) using an energy gate.
  ///
  /// Parameters
  /// ----------
  /// buf       : Pointer to int16_t PCM samples.
  /// n_samples : Number of samples to evaluate.
  /// threshold : RMS threshold above which the segment is classified as speech.
  /// Use 300 (VAD_RMS_THRESHOLD) for the default production gate.
  ///
  /// Returns
  /// -------
  /// 1 if RMS > threshold (speech), 0 otherwise (silence).
  int vad_is_speech(
    ffi.Pointer<ffi.Int16> buf,
    int n_samples,
    int threshold,
  ) {
    return _vad_is_speech(
      buf,
      n_samples,
      threshold,
    );
  }

  late final _vad_is_speechPtr = _lookup<
      ffi.NativeFunction<
          ffi.Int Function(
              ffi.Pointer<ffi.Int16>, ffi.Int, ffi.Int)>>('vad_is_speech');
  late final _vad_is_speech = _vad_is_speechPtr
      .asFunction<int Function(ffi.Pointer<ffi.Int16>, int, int)>();
}

/// AudioBufferResult
/// -----------------
/// Returned by extract_audio_pcm().  Passed back across the FFI boundary
/// by value (struct, not pointer) so Dart can inspect both fields without
/// dereferencing anything.
///
/// Fields
/// ------
/// data         : Pointer to a malloc()'d array of int16_t PCM samples.
/// Layout: 16 kHz, mono, signed 16-bit little-endian (S16LE).
/// NULL on failure.
/// sample_count : Number of valid int16_t elements in data[].
/// 0 on failure or if the file contains no speech (all VAD-gated).
final class AudioBufferResult extends ffi.Struct {
  external ffi.Pointer<ffi.Int16> data;

  @ffi.Int()
  external int sample_count;
}

final class VideoFrame extends ffi.Struct {
  external ffi.Pointer<ffi.Float> data;

  @ffi.Double()
  external double timestamp_s;
}

final class VideoExtractionResult extends ffi.Struct {
  external ffi.Pointer<VideoFrame> frames;

  @ffi.Int()
  external int frame_count;
}

extension MediaCoreVideoExtension on MediaCoreBindings {
  VideoExtractionResult extract_video_frames(
    ffi.Pointer<ffi.Char> video_path,
    double scene_threshold,
  ) {
    return _extract_video_frames(
      video_path,
      scene_threshold,
    );
  }

  VideoExtractionResult Function(ffi.Pointer<ffi.Char>, double) get _extract_video_frames {
    late final _extract_video_framesPtr = _lookup<
        ffi.NativeFunction<
            VideoExtractionResult Function(
                ffi.Pointer<ffi.Char>, ffi.Double)>>('extract_video_frames');
    return _extract_video_framesPtr
        .asFunction<VideoExtractionResult Function(ffi.Pointer<ffi.Char>, double)>();
  }

  void free_video_frames(
    VideoExtractionResult result,
  ) {
    return _free_video_frames(
      result,
    );
  }

  void Function(VideoExtractionResult) get _free_video_frames {
    late final _free_video_framesPtr = _lookup<
            ffi.NativeFunction<ffi.Void Function(VideoExtractionResult)>>(
        'free_video_frames');
    return _free_video_framesPtr.asFunction<void Function(VideoExtractionResult)>();
  }
}

final class WhisperMelResult extends ffi.Struct {
  external ffi.Pointer<ffi.Float> data;

  @ffi.Int()
  external int size;
}

extension MediaCoreWhisperExtension on MediaCoreBindings {
  WhisperMelResult whisper_compute_mel(
    ffi.Pointer<ffi.Int16> pcm_data,
    int sample_count,
  ) {
    return _whisper_compute_mel(
      pcm_data,
      sample_count,
    );
  }

  WhisperMelResult Function(ffi.Pointer<ffi.Int16>, int) get _whisper_compute_mel {
    late final _whisper_compute_melPtr = _lookup<
        ffi.NativeFunction<
            WhisperMelResult Function(
                ffi.Pointer<ffi.Int16>, ffi.Int)>>('whisper_compute_mel');
    return _whisper_compute_melPtr
        .asFunction<WhisperMelResult Function(ffi.Pointer<ffi.Int16>, int)>();
  }

  void free_whisper_mel(
    WhisperMelResult result,
  ) {
    return _free_whisper_mel(
      result,
    );
  }

  void Function(WhisperMelResult) get _free_whisper_mel {
    late final _free_whisper_melPtr = _lookup<
            ffi.NativeFunction<ffi.Void Function(WhisperMelResult)>>(
        'free_whisper_mel');
    return _free_whisper_melPtr.asFunction<void Function(WhisperMelResult)>();
  }

  ffi.Pointer<ffi.Char> whisper_decode_tokens(
    ffi.Pointer<ffi.Int> tokens,
    int token_count,
    ffi.Pointer<ffi.Char> tokenizer_json_path,
  ) {
    return _whisper_decode_tokens(
      tokens,
      token_count,
      tokenizer_json_path,
    );
  }

  ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Int>, int, ffi.Pointer<ffi.Char>) get _whisper_decode_tokens {
    late final _whisper_decode_tokensPtr = _lookup<
        ffi.NativeFunction<
            ffi.Pointer<ffi.Char> Function(
                ffi.Pointer<ffi.Int>, ffi.Int, ffi.Pointer<ffi.Char>)>>('whisper_decode_tokens');
    return _whisper_decode_tokensPtr
        .asFunction<ffi.Pointer<ffi.Char> Function(ffi.Pointer<ffi.Int>, int, ffi.Pointer<ffi.Char>)>();
  }

  void free_string(
    ffi.Pointer<ffi.Char> str,
  ) {
    return _free_string(
      str,
    );
  }

  void Function(ffi.Pointer<ffi.Char>) get _free_string {
    late final _free_stringPtr = _lookup<
            ffi.NativeFunction<ffi.Void Function(ffi.Pointer<ffi.Char>)>>(
        'free_string');
    return _free_stringPtr.asFunction<void Function(ffi.Pointer<ffi.Char>)>();
  }
}

final class OcrBoundingBox extends ffi.Struct {
  @ffi.Array.multi([8])
  external ffi.Array<ffi.Float> pts;
}

final class OcrBoxResult extends ffi.Struct {
  external ffi.Pointer<OcrBoundingBox> boxes;

  @ffi.Int()
  external int box_count;
}

final class OcrCropResult extends ffi.Struct {
  external ffi.Pointer<ffi.Float> data;

  @ffi.Int()
  external int width;

  @ffi.Int()
  external int height;
}

extension MediaCoreOcrExtension on MediaCoreBindings {
  OcrBoxResult ocr_extract_bboxes(
    ffi.Pointer<ffi.Float> heatmap,
    int width,
    int height,
    double threshold,
  ) {
    return _ocr_extract_bboxes(
      heatmap,
      width,
      height,
      threshold,
    );
  }

  OcrBoxResult Function(ffi.Pointer<ffi.Float>, int, int, double) get _ocr_extract_bboxes {
    late final _ocr_extract_bboxesPtr = _lookup<
        ffi.NativeFunction<
            OcrBoxResult Function(
                ffi.Pointer<ffi.Float>, ffi.Int, ffi.Int, ffi.Float)>>('ocr_extract_bboxes');
    return _ocr_extract_bboxesPtr
        .asFunction<OcrBoxResult Function(ffi.Pointer<ffi.Float>, int, int, double)>();
  }

  void free_ocr_boxes(
    OcrBoxResult result,
  ) {
    return _free_ocr_boxes(
      result,
    );
  }

  void Function(OcrBoxResult) get _free_ocr_boxes {
    late final _free_ocr_boxesPtr = _lookup<
            ffi.NativeFunction<ffi.Void Function(OcrBoxResult)>>(
        'free_ocr_boxes');
    return _free_ocr_boxesPtr.asFunction<void Function(OcrBoxResult)>();
  }

  OcrCropResult ocr_crop_and_warp(
    ffi.Pointer<ffi.Float> image_chw,
    int img_w,
    int img_h,
    OcrBoundingBox box,
    int target_height,
  ) {
    return _ocr_crop_and_warp(
      image_chw,
      img_w,
      img_h,
      box,
      target_height,
    );
  }

  OcrCropResult Function(ffi.Pointer<ffi.Float>, int, int, OcrBoundingBox, int) get _ocr_crop_and_warp {
    late final _ocr_crop_and_warpPtr = _lookup<
        ffi.NativeFunction<
            OcrCropResult Function(
                ffi.Pointer<ffi.Float>, ffi.Int, ffi.Int, OcrBoundingBox, ffi.Int)>>('ocr_crop_and_warp');
    return _ocr_crop_and_warpPtr
        .asFunction<OcrCropResult Function(ffi.Pointer<ffi.Float>, int, int, OcrBoundingBox, int)>();
  }

  void free_ocr_crop(
    OcrCropResult result,
  ) {
    return _free_ocr_crop(
      result,
    );
  }

  void Function(OcrCropResult) get _free_ocr_crop {
    late final _free_ocr_cropPtr = _lookup<
            ffi.NativeFunction<ffi.Void Function(OcrCropResult)>>(
        'free_ocr_crop');
    return _free_ocr_cropPtr.asFunction<void Function(OcrCropResult)>();
  }
}

const int INT64_MAX = 9223372036854775807;

const int INT64_MIN = -9223372036854775808;

const int UINT64_MAX = -1;

const int __INT_LEAST64_MIN = -9223372036854775808;

const int __INT_LEAST64_MAX = 9223372036854775807;

const int __UINT_LEAST64_MAX = -1;

const int __INT_LEAST32_MIN = -2147483648;

const int __INT_LEAST32_MAX = 2147483647;

const int __UINT_LEAST32_MAX = 4294967295;

const int __INT_LEAST16_MIN = -32768;

const int __INT_LEAST16_MAX = 32767;

const int __UINT_LEAST16_MAX = 65535;

const int __INT_LEAST8_MIN = -128;

const int __INT_LEAST8_MAX = 127;

const int __UINT_LEAST8_MAX = 255;

const int INT_LEAST64_MIN = -9223372036854775808;

const int INT_LEAST64_MAX = 9223372036854775807;

const int UINT_LEAST64_MAX = -1;

const int INT_FAST64_MIN = -9223372036854775808;

const int INT_FAST64_MAX = 9223372036854775807;

const int UINT_FAST64_MAX = -1;

const int INT32_MAX = 2147483647;

const int INT32_MIN = -2147483648;

const int UINT32_MAX = 4294967295;

const int INT_LEAST32_MIN = -2147483648;

const int INT_LEAST32_MAX = 2147483647;

const int UINT_LEAST32_MAX = 4294967295;

const int INT_FAST32_MIN = -2147483648;

const int INT_FAST32_MAX = 2147483647;

const int UINT_FAST32_MAX = 4294967295;

const int INT16_MAX = 32767;

const int INT16_MIN = -32768;

const int UINT16_MAX = 65535;

const int INT_LEAST16_MIN = -32768;

const int INT_LEAST16_MAX = 32767;

const int UINT_LEAST16_MAX = 65535;

const int INT_FAST16_MIN = -32768;

const int INT_FAST16_MAX = 32767;

const int UINT_FAST16_MAX = 65535;

const int INT8_MAX = 127;

const int INT8_MIN = -128;

const int UINT8_MAX = 255;

const int INT_LEAST8_MIN = -128;

const int INT_LEAST8_MAX = 127;

const int UINT_LEAST8_MAX = 255;

const int INT_FAST8_MIN = -128;

const int INT_FAST8_MAX = 127;

const int UINT_FAST8_MAX = 255;

const int INTPTR_MIN = -9223372036854775808;

const int INTPTR_MAX = 9223372036854775807;

const int UINTPTR_MAX = -1;

const int PTRDIFF_MIN = -9223372036854775808;

const int PTRDIFF_MAX = 9223372036854775807;

const int SIZE_MAX = -1;

const int INTMAX_MIN = -9223372036854775808;

const int INTMAX_MAX = 9223372036854775807;

const int UINTMAX_MAX = -1;

const int SIG_ATOMIC_MIN = -2147483648;

const int SIG_ATOMIC_MAX = 2147483647;

const int WINT_MIN = 0;

const int WINT_MAX = 65535;

const int WCHAR_MAX = 65535;

const int WCHAR_MIN = 0;
